[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "okf-nav"
version = "0.1.0"
description = "OKF Knowledge Navigator — search, audit, fix, and export Open Knowledge Format bundles"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = ["okf", "open-knowledge-format", "knowledge-base", "cli", "search", "audit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "pyyaml >= 6.0",
]

[project.optional-dependencies]
semantic = ["scikit-learn >= 1.0", "numpy >= 1.20"]

[project.urls]
Homepage = "https://github.com/lennney/okf-nav"
Source = "https://github.com/lennney/okf-nav"
Issues = "https://github.com/lennney/okf-nav/issues"

[project.scripts]
okf-nav = "okf_nav.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/okf_nav"]
